--- a/Intro-to-readxl.html
+++ b/Intro-to-readxl.html
@@ -373,6 +373,39 @@ summary {
 <div id="learning-readxl" class="section level1">
 <h1>Learning <code>readxl</code></h1>
 <p>We are working with data in readxl and it’s going to be amazing!</p>
+<p>We’re going to use packages:</p>
+<ul>
+<li>tidyverse</li>
+<li>readxl</li>
+<li>writexl</li>
+<li>here</li>
+</ul>
+<pre class="r"><code>library(tidyverse)</code></pre>
+<pre><code>## ── Attaching packages ────────────────────────────────────────────────────────── tidyverse 1.3.0 ──</code></pre>
+<pre><code>## ✔ ggplot2 3.2.1     ✔ purrr   0.3.3
+## ✔ tibble  2.1.3     ✔ dplyr   0.8.3
+## ✔ tidyr   1.0.0     ✔ stringr 1.4.0
+## ✔ readr   1.3.1     ✔ forcats 0.4.0</code></pre>
+<pre><code>## ── Conflicts ───────────────────────────────────────────────────────────── tidyverse_conflicts() ──
+## ✖ dplyr::filter() masks stats::filter()
+## ✖ dplyr::lag()    masks stats::lag()</code></pre>
+<pre class="r"><code>library(readxl)
+library(writexl)
+library(here)</code></pre>
+<pre><code>## here() starts at /Users/jenjohansen/github/r-workshop</code></pre>
+<pre class="r"><code># install.packages (&quot;package_name&quot;)</code></pre>
+<div id="read-in-fish-counts" class="section level3">
+<h3>Read in fish counts</h3>
+<pre class="r"><code>#### Read in the fish_counts_curated.csv
+fish_counts &lt;- read_csv(here(&quot;R-workshop-data&quot;,&quot;fish_counts_curated.csv&quot;))</code></pre>
+<pre><code>## Parsed with column specification:
+## cols(
+##   year = col_double(),
+##   site = col_character(),
+##   common_name = col_character(),
+##   total_count = col_double()
+## )</code></pre>
+</div>
 </div>
 
 
