--- a/Intro-to-readxl.html
+++ b/Intro-to-readxl.html
@@ -449,6 +449,7 @@ fish_counts &lt;- read_csv(here(&quot;R-workshop-data&quot;,&quot;fish_counts_cu
 #write_csv(kelp_golb, here())
 
 write_xlsx(kelp_golb, &quot;kelp_goleta_excel.xlsx&quot;)</code></pre>
+<p>Hello</p>
 </div>
 </div>
 
